--- a/src/main/resources/edu/virginia/sde/reviews/hello-world.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/hello-world.fxml
@@ -10,3 +10,8 @@
             <Label fx:id="messageLabel" />
       </VBox>
 </AnchorPane>
+
+        <?xml version="1.0" encoding="UTF-8"?>
+        <?import javafx.scene.control.*?>
+        <?import javafx.scene.layout.VBox?>
+
