--- a/src/main/resources/edu/virginia/sde/reviews/CourseSearchView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/CourseSearchView.fxml
@@ -2,12 +2,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.virginia.sde.controller.CourseSearchController">
+<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.virginia.sde.controller.CourseSearchController">
+    <!-- Search Fields -->
     <TextField fx:id="subjectField" promptText="Search by Subject (e.g., CS)" />
     <TextField fx:id="numberField" promptText="Search by Course Number (e.g., 3140)" />
     <TextField fx:id="titleField" promptText="Search by Course Title" />
     <Button fx:id="searchButton" text="Search" onAction="#handleSearch" />
 
+    <!-- Table for Course List -->
     <TableView fx:id="courseTable">
         <columns>
             <TableColumn fx:id="subjectColumn" text="Subject" />
