--- a/src/main/resources/edu/virginia/sde/reviews/CourseSearchView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/CourseSearchView.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
 <VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.virginia.sde.controller.CourseSearchController">
-    <!-- Search Fields -->
-    <TextField fx:id="subjectField" promptText="Search by Subject (e.g., CS)" />
-    <TextField fx:id="numberField" promptText="Search by Course Number (e.g., 3140)" />
-    <TextField fx:id="titleField" promptText="Search by Course Title" />
+    <HBox spacing="10">
+        <TextField fx:id="subjectField" promptText="Search by Subject (e.g., CS)" />
+        <TextField fx:id="numberField" promptText="Search by Number (e.g., 3140)" />
+        <TextField fx:id="titleField" promptText="Search by Title" />
+    </HBox>
+
+    <TextField fx:id="searchField" promptText="Search Courses..." />
+
     <Button fx:id="searchButton" text="Search" onAction="#handleSearch" />
 
-    <!-- Table for Course List -->
     <TableView fx:id="courseTable">
         <columns>
             <TableColumn fx:id="subjectColumn" text="Subject" />
@@ -19,7 +23,9 @@
         </columns>
     </TableView>
 
-    <Button fx:id="addCourseButton" text="Add Course" onAction="#handleAddCourse" />
-    <Button fx:id="myReviewsButton" text="My Reviews" onAction="#handleMyReviews" />
-    <Button fx:id="logoutButton" text="Log Out" onAction="#handleLogout" />
+    <HBox spacing="10">
+        <Button fx:id="addCourseButton" text="Add Course" onAction="#handleAddCourse" />
+        <Button fx:id="myReviewsButton" text="My Reviews" onAction="#handleMyReviews" />
+        <Button fx:id="logoutButton" text="Log Out" onAction="#handleLogout" />
+    </HBox>
 </VBox>
