--- a/src/main/resources/edu/virginia/sde/reviews/CourseSearchView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/CourseSearchView.fxml
@@ -14,6 +14,7 @@
 
     <Button fx:id="searchButton" text="Search" onAction="#handleSearch" />
 
+
     <TableView fx:id="courseTable">
         <columns>
             <TableColumn fx:id="subjectColumn" text="Subject" />
@@ -27,5 +28,6 @@
         <Button fx:id="addCourseButton" text="Add Course" onAction="#handleAddCourse" />
         <Button fx:id="myReviewsButton" text="My Reviews" onAction="#handleMyReviews" />
         <Button fx:id="logoutButton" text="Log Out" onAction="#handleLogout" />
+        <Button fx:id="writeReviewButton" text="Write Review" onAction="#handleWriteReview" />
     </HBox>
 </VBox>
