--- a/src/main/resources/edu/virginia/sde/reviews/LoginView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/LoginView.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.virginia.sde.controller.LoginController">
-    <Label text="Login to Course Reviews" />
+    <Label text="Login" style="-fx-font-size: 20px;" />
     <TextField fx:id="usernameField" promptText="Username" />
     <PasswordField fx:id="passwordField" promptText="Password" />
-    <Button fx:id="loginButton" text="Login" onAction="#handleLogin" />
-    <Label fx:id="errorMessage" textFill="red" />
+    <Button text="Login" onAction="#handleLogin" />
+    <Button text="Create User" onAction="#handleCreateUser" />
 </VBox>
