--- a/src/main/resources/edu/virginia/sde/reviews/WriteReviewView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/WriteReviewView.fxml
@@ -2,7 +2,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/javafx/17.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.virginia.sde.controller.WriteReviewController">
+<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.virginia.sde.controller.WriteReviewController">
     <Label text="Write a Review" style="-fx-font-size: 20px;" />
     <ComboBox fx:id="courseComboBox" promptText="Select a Course" />
     <TextField fx:id="ratingField" promptText="Rating (1-5)" />
