--- a/src/main/resources/edu/virginia/sde/reviews/CourseReviewsView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/CourseReviewsView.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:controller="edu.virginia.sde.reviews.CourseReviewsController" prefHeight="270.0" prefWidth="259.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <VBox layoutX="30.0" layoutY="35.0" prefHeight="200.0" prefWidth="203.0">
-        <Label text="Press the button" />
-        <Button mnemonicParsing="false" onAction="#handleButton" text="Button" />
-        <Label fx:id="messageLabel" />
-    </VBox>
-</AnchorPane>
+<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.virginia.sde.reviews.CourseReviewsController">
+    <Label text="Course Reviews" />
+    <TableView fx:id="reviewsTable">
+        <columns>
+            <TableColumn fx:id="usernameColumn" text="Username" />
+            <TableColumn fx:id="ratingColumn" text="Rating" />
+            <TableColumn fx:id="commentColumn" text="Comment" />
+        </columns>
+    </TableView>
+    <Button text="Back" onAction="#handleBack" />
+</VBox>
