--- a/src/main/resources/edu/virginia/sde/reviews/CourseReviewsView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/CourseReviewsView.fxml
@@ -3,13 +3,14 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.virginia.sde.reviews.CourseReviewsController">
-    <Label text="Course Reviews" />
+    <Label fx:id="titleLabel" text="Course Reviews" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
     <TableView fx:id="reviewsTable">
         <columns>
-            <TableColumn fx:id="usernameColumn" text="Username" />
             <TableColumn fx:id="ratingColumn" text="Rating" />
             <TableColumn fx:id="commentColumn" text="Comment" />
+            <TableColumn fx:id="timestampColumn" text="Timestamp" />
         </columns>
     </TableView>
+    <Label fx:id="averageRatingLabel" text="Average Rating: 0.00" />
     <Button text="Back" onAction="#handleBack" />
 </VBox>
