--- a/src/main/resources/edu/virginia/sde/reviews/CourseReviewsView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/CourseReviewsView.fxml
@@ -16,4 +16,5 @@
     </TableView>
 
     <Button text="Back" onAction="#handleBack" />
+    <Button text="Write Review" onAction="#handleWriteReview" />
 </VBox>
