--- a/src/main/resources/edu/virginia/sde/reviews/LoginView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/LoginView.fxml
@@ -8,4 +8,5 @@
     <PasswordField fx:id="passwordField" promptText="Password" />
     <Button text="Login" onAction="#handleLogin" />
     <Button text="Create User" onAction="#handleCreateUser" />
+    <Button text="Close" onAction="#closeWindow" />
 </VBox>
