--- a/src/main/resources/edu/virginia/sde/reviews/UserRegistrationView.fxml
+++ b/src/main/resources/edu/virginia/sde/reviews/UserRegistrationView.fxml
@@ -6,6 +6,6 @@
     <Label text="User Registration" style="-fx-font-size: 20px;" />
     <TextField fx:id="usernameField" promptText="Enter Username" />
     <PasswordField fx:id="passwordField" promptText="Enter Password" />
-    <Button text="Register" onAction="#handleRegister" />
+    <Button text="Register" onAction="#handleCreateUser" />
     <Button text="Back to Login" onAction="#handleBackToLogin" />
 </VBox>
